# spamserver

./: .gitignore  Makefile
conf/: spamserver.conf  teng.conf
debian/: changelog  conffiles  control  dirs  links  postinst  postrm  prerm  rules
etc/: initscript  logrotate  run
help/: listTemplates  sendMail  sendTemplatedMail  template.create  template.getAttributes  template.remove  template.resolve  template.setAttributes
sql/: spamserver.sql
src/: Makefile.am  cfg.cc  cfg.h  configure.ac  configure.m4  core.cc  core.h  frpcinterface.cc  frpcinterface.h  magic++.h  mailer.cc  mailer.h  server.cc  server.h  types.h  version.h
